--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,17 +62,20 @@ body {
 }
 
 @media print {
-  body * {
+  body {
     visibility: hidden;
   }
-  .printable-content, .printable-content * {
-    visibility: visible;
-  }
   .printable-content {
+    visibility: visible;
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
+    height: 100%;
+    z-index: 9999;
+    padding: 1rem;
+    margin: 0;
+    background: white;
   }
   .non-printable-content {
     display: none;
